# mats-experiments

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: CommandLineParsing.hpp  MiningProblem.hpp  NodesProblem.hpp  TurbinesProblem.hpp
cpp/plots/: README.md  convert.py  plotGeneration.sh  runExperiments.py  transform.py
cpp/plots/Scripts/: plotResults.py
cpp/plots/experiments/: nodesp.json  wind_final.json
cpp/sim/: Analytic_components.py  FLORIS_run.py  main.py
cpp/sim/configs/: template_floris.json
cpp/sim/floris/: farm.py
cpp/src/: ThompsonSamplingBernoulliPolicy.cpp  ThompsonSamplingPoissonPolicy.cpp  mines_llr_main.cpp  mines_mauce_main.cpp  mines_scql_main.cpp  mines_thompson_main.cpp  nodes_thompson_main.cpp  nodesp_llr_main.cpp  nodesp_mauce_main.cpp  nodesp_scql_main.cpp  nodesp_thompson_main.cpp  wind_llr_main.cpp  wind_rnd_main.cpp  wind_thompson_main.cpp
include/: ThompsonSamplingBernoulliPolicy.hpp  ThompsonSamplingPoissonPolicy.hpp
plots/: statistics.py
plots/Scripts/: makeGnuplotScript.sh
plots/experiments/: experiments.json
python/: README.md  coordination_graph.py  environments.py  main.py  posteriors.py  thompson_sampling.py
sim/: README.md  generator.py  go-openmdao-0.13.0.py  rotor_components.py  run_in_venv.sh
sim/configs/: specs_NREL_5MW.json
sim/floris/: input_reader.py
src/: CMakeLists.txt  mines_rnd_main.cpp  mines_thompsonb_main.cpp  nodes_llr_main.cpp  nodes_mauce_main.cpp  nodes_rnd_main.cpp  nodes_scql_main.cpp  nodes_thompsonb_main.cpp  nodesp_rnd_main.cpp  nodesp_thompsonp_main.cpp  wind_mauce_main.cpp  wind_scql_main.cpp
